apps/monitoring/status/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: status
  namespace: uptimekuma
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`status.stadthagen.dev`)
      kind: Rule
      services:
        - name: status
          port: 3001
  tls:
    secretName: status-tls
